<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/accounts"
                      android:key="accounts">
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/settings_autocheck_title">
	  <CheckBoxPreference android:key="autocheck"
	                      android:title="@string/settings_autocheck"
	                      android:summary="@string/settings_checksummary"/>
	  <ListPreference android:key="interval"
	                  android:title="@string/settings_interval"
	                  android:entries="@array/intervalsTitle"
	                  android:entryValues="@array/intervalsValues" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/settings_notify">
    <CheckBoxPreference android:key="usevibro"
                        android:title="@string/settings_usevibro"
                        android:summary=""/>
    <RingtonePreference android:key="usesound"
                        android:title="@string/settings_melody"
                        android:summary=""/>
  </PreferenceCategory>
</PreferenceScreen>