<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2010-2011  Dmitry Petuhov
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

<LinearLayout android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical" >
  <TextView android:text="@string/fullinfo_tid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="3dip" 
  />
  <TextView android:id="@+id/fullinfo_tid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
  
  <TextView android:text="@string/fullinfo_aid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="3dip"
  />
  <TextView android:id="@+id/fullinfo_aid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
  
  <TextView android:text="@string/fullinfo_an"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="3dip"
  />
  <TextView android:id="@+id/fullinfo_an"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />

  <TextView android:id="@+id/fullinfo_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />

  <TextView android:id="@+id/fullinfo_bonds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />

  <TextView android:text="@string/fullinfo_last_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="3dip"
  />
  <TextView android:id="@+id/fullinfo_last_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />

  <TextView android:text="@string/fullinfo_last_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="3dip"
  />
  <TextView android:id="@+id/fullinfo_last_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
  <TextView android:id="@+id/fullinfo_signal_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
  <TextView android:id="@+id/fullinfo_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
  <TextView android:text="@string/fullinfo_soft_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="3dip"
  />
  <TextView android:id="@+id/fullinfo_soft_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />

  <TextView android:text="@string/fullinfo_printer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="3dip"
  />
  <TextView android:id="@+id/fullinfo_printer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
  
  <TextView android:text="@string/fullinfo_cashbin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="3dip"
  />
  <TextView android:id="@+id/fullinfo_cashbin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
<TableLayout android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dip"
>
<TableRow>
  <TextView android:text="@string/fullinfo_bonds10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dip"
  />  
  <TextView android:id="@+id/fullinfo_bonds10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
</TableRow>
<TableRow>
  <TextView android:text="@string/fullinfo_bonds50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dip"
  />
  <TextView android:id="@+id/fullinfo_bonds50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
</TableRow>
<TableRow>
  <TextView android:text="@string/fullinfo_bonds100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dip"
  />
  <TextView android:id="@+id/fullinfo_bonds100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
</TableRow>
<TableRow>
 <TextView android:text="@string/fullinfo_bonds500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dip"
  />
  <TextView android:id="@+id/fullinfo_bonds500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
</TableRow>
<TableRow>
  <TextView android:text="@string/fullinfo_bonds1000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dip"
  />
  <TextView android:id="@+id/fullinfo_bonds1000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
</TableRow>
<TableRow>
  <TextView android:text="@string/fullinfo_bonds5000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dip"
  />
  <TextView android:id="@+id/fullinfo_bonds5000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
</TableRow>
</TableLayout>
  <TextView android:id="@+id/fullinfo_pays_per_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
</LinearLayout>
</ScrollView>