<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2010-2011  Dmitry Petuhov
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/add_account_auth_title"
          android:padding="5dip"
          android:background="#ffffffff"
          android:textColor="#ff000000"
          />
<ScrollView android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
    >
	<LinearLayout android:layout_width="fill_parent"
	              android:layout_height="wrap_content"
	              android:orientation="vertical"
	              android:paddingTop="3dip"
	              android:paddingLeft="5dip"
	              android:paddingRight="5dip">
    <TextView
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="@string/terminal_id"
        />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:id="@+id/terminal" 
        />
		<TextView
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/login"
		    />
		<EditText
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:singleLine="true"
		    android:id="@+id/login" 
		    />
		<TextView
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/password"
		    />
		<EditText
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:singleLine="true"
		    android:password="true"
		    android:id="@+id/password" 
		    />		
	</LinearLayout>
</ScrollView>
<FrameLayout android:layout_height="wrap_content"
             android:layout_width="fill_parent"
             android:padding="6dip"
             android:background="#FF666666">
	<Button
	    android:text="@string/next"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:onClick="CheckAccount"
	    />
</FrameLayout>
</LinearLayout>
