<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2010-2011  Dmitry Petuhov
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">
<org.pvoid.common.views.FullHeightLayout
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="9dp" >
    <TextView
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        android:text="@string/terminal_id"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:id="@+id/terminal"
        android:layout_marginTop="5dp"
        android:numeric="integer"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        android:text="@string/login"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:id="@+id/login"
        android:layout_marginTop="5dp"
        android:numeric="integer"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        android:text="@string/password"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:password="true"
        android:layout_marginTop="5dp"
        android:id="@+id/password"/>
    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="right"
              android:clickable="true"
              android:focusable="true"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:textColor="?android:attr/textColorPrimary"
              android:onClick="howClicked"
              android:text="@string/how_to_add_acc"/>
    <Button
      android:text="@string/add"
      android:id="@+id/add"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dip"
      android:onClick="checkAccount"/>
</org.pvoid.common.views.FullHeightLayout>
</ScrollView>